--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,14 @@ dependencies:
   english_words: ^3.1.5
   provider: ^4.3.2+3
   http: ^0.12.2
+  json_annotation: ^3.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
     
   json_serializable: ^3.5.1
+  build_runner: ^1.10.11
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
